Bug 98983 - Cells look empty, they are not. An .ods file created (by saving as .ods from original .xls) with previous stable version of LO
Summary: Cells look empty, they are not. An .ods file created (by saving as .ods from ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords:
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-03-30 13:42 UTC by Tapani Kuusisto
Modified: 2016-10-25 19:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
It looks empty, but you can see the content of the selected cell in formatting window (15.74 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-03-30 13:42 UTC, Tapani Kuusisto
Details
printscreen (175.10 KB, image/png)
2016-03-30 16:45 UTC, raal
Details
How the file looks to me (101.76 KB, image/png)
2016-04-02 15:15 UTC, Tapani Kuusisto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tapani Kuusisto 2016-03-30 13:42:57 UTC
Created attachment 123957 [details]
It looks empty, but you can see the content of the selected cell in formatting window

Today the file opened correctly, but then I updated to fresh. An .ods file, saved as such from an .xls, created originally by Econet (financial software) on another machine (list of unpaid bills with reference numbers and bank accounts etc).

The cells look empty, except for the cells I have myself written with LibreOffice, on several days. So the conversion from the .xls is the problem - I tried with the original .xls, and the cells look empty. But the info is there all the time. When you select a cell, you can see the content, just not in the cell but on the formatting window. I tried changing the font color and size, didn't help. Background color makes no difference, editing the content of the cell by just adding something there, nope.
Luckily I was able to get the data I needed to pay the bills.

I just tried opening another .xls file (mailed to me by a friend, don't know what software it was created with)), and it opened normally. Econet is old version, probably saves in old .xls format. At work I use Still version of LibreOffice, and there have been no problems with files.

Attached edited version of the file.

Maybe not the biggest problem, but still...

Best regards,

Tapani K
Comment 1 raal 2016-03-30 16:45:35 UTC
Created attachment 123961 [details]
printscreen

Hello, I can see data in the file. Please post a printcsreen what do you see.

Version: 5.2.0.0.alpha0+
Build ID: ef34535ceb60d7d63b8d8671e4c6e9e43ffbd17d
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-03-27_09:53:05
Comment 2 Tapani Kuusisto 2016-04-02 15:15:34 UTC
Created attachment 124029 [details]
How the file looks to me

If it wasn't for the spellcheckers warnings, it could have fooled me...

TK
Comment 3 raal 2016-04-02 17:45:39 UTC
Have you tested the options for the graphics card in Menu/Tools/LibreOffice/View?
Disabling the OpenGL
Comment 4 Buovjaga 2016-04-10 16:17:10 UTC
Tapsa: you did not mention the exact version of LibreOffice you are using.

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided more information (OpenGL setting & version).
Comment 5 Tapani Kuusisto 2016-04-10 18:04:35 UTC
The version is 5.1.1.3
Comment 6 Buovjaga 2016-04-11 06:34:59 UTC
(In reply to Tapani Kuusisto from comment #5)
> The version is 5.1.1.3

..and the OpenGL setting is?

Please test with 5.1.2 as well.
Comment 7 Tapani Kuusisto 2016-04-11 18:24:22 UTC
Tried with 5.1.2, but it crashes libreoffice. After restart and recovering the files, I got fatal error: SEH Exception: ACCESS VIOLATION. 

OpenGL version 6.14.10.13399
Comment 8 Buovjaga 2016-04-12 09:46:15 UTC
(In reply to Tapani Kuusisto from comment #7)
> Tried with 5.1.2, but it crashes libreoffice. After restart and recovering
> the files, I got fatal error: SEH Exception: ACCESS VIOLATION. 
> 
> OpenGL version 6.14.10.13399

I meant this: Tools - Options - LibO - View - Use OpenGL for all rendering
Is it enabled or disabled?
If it is disabled, it says "GL is currently disabled" underneath the options.
Comment 9 Tapani Kuusisto 2016-04-13 15:04:22 UTC
Ok.
OpenGL is enabled for all rendering.
Comment 10 Buovjaga 2016-04-13 15:22:43 UTC
(In reply to Tapani Kuusisto from comment #9)
> Ok.
> OpenGL is enabled for all rendering.

And if you disable it and restart, does the problem go away?
Comment 11 Tapani Kuusisto 2016-04-13 17:46:20 UTC
That's the trick, thank you!
Comment 12 raal 2016-04-14 06:15:07 UTC
(In reply to Tapani Kuusisto from comment #11)
> That's the trick, thank you!

Please copy and paste here the contents of your: C:\Users\User\AppData\Roaming\LibreOffice\4\cache\opengl_device.log
Comment 13 Tapani Kuusisto 2016-04-14 16:17:18 UTC
DriverVersion: 15.201.1151.1008
DriverDate: 11-4-2015
DeviceID: PCI\VEN_1002&DEV_9901&SUBSYS_85261043&REV_00
AdapterVendorID: 0x1002
AdapterDeviceID: 0x9901
AdapterSubsysID: 0x85261043
DeviceKey: System\CurrentControlSet\Control\Video\{45D6F48A-4C23-43D3-B555-D8C74F2E29E1}\0000
DeviceString: AMD Radeon HD 7660D


At work, the latest Fresh works fine, didn't need to alter any settings.
Comment 14 Michael Meeks 2016-04-14 17:53:24 UTC
Tapani - thanks for the report; most odd; Marco can you append to your list of things to poke at ? =) Thanks.
Comment 15 How can I remove my account? 2016-05-12 12:29:39 UTC
I get a crash even when loading that document. Debugging and fixing.
Comment 16 How can I remove my account? 2016-05-12 12:33:33 UTC
Seems that the document wants to use the font "MS Sans Serif" which is a non-scalable font, and apparently the code for using such is currently broken, or the fallback to some suitable scalable font instead is broken.
Comment 17 How can I remove my account? 2016-05-12 13:13:00 UTC
Just avoiding the glyph caching for non-TrueType fonts is not good enough, the text still does not show up.
Comment 18 How can I remove my account? 2016-05-12 13:59:17 UTC
I guess the thing to do here is simply to unconditionally map MS Sans Serif to Microsoft Sans Serif, which is supposed to be metric compatible, and present on all Windowses since XP anyway. Will try.
Comment 19 Commit Notification 2016-05-12 14:49:48 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0a986598cf64fc386d267693a78047c2dd71a61a

tdf#98983: Font fallback: Map 'MS Sans Serif' to the TrueType version

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2016-05-12 15:02:01 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=64e24d9bfc02910b80d77b83dcf3346eff546f96

Revert "tdf#98983: Font fallback: Map 'MS Sans Serif' to the TrueType version"

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 How can I remove my account? 2016-05-12 15:24:00 UTC
Actually, for me LO crashes even...
Comment 22 How can I remove my account? 2016-05-12 15:24:40 UTC
Also see bug #97249 and bug #98989. But those were for the non-OpenGL case, I think.
Comment 23 How can I remove my account? 2016-05-13 12:06:47 UTC
Turned out nothing was actually needed in the master branch, but for the 5.1 branch a patch is awaiting in gerrit: https://gerrit.libreoffice.org/#/c/24951/
Comment 24 Commit Notification 2016-05-17 07:21:24 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d0e80229ba99d3ad2b57a9c213bda8b0d861524&h=libreoffice-5-1

tdf#98983: Use 'Microsoft Sans Serif' instead of 'MS Sans Serif'

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 How can I remove my account? 2016-05-24 09:16:25 UTC
Resolving this as fixed now, reopen if necessary. (But, as always, don't reopen unless it *is* exactly the same symptoms that still appear. Prefer to file a new bug.)