tdf#98983: Font fallback: Map 'MS Sans Serif' to the TrueType version

Also, I don't see the point in using lstrcpynW() instead of a plain
wcscpy(), as we were passing the manually specified very length of the
source string (including terminating nul character) anyway. We did not
use a copying function that would have taken the size of the
destination buffer as a limit parameter, for instance.

Change-Id: If9e2f56b16358201c113e06289f63ed3454e00c9